# XML::FeedPP Changes

2007/08/20 (0.30)
    * Atom 1.0 supported. Atom 0.3 is still default. (thanks to takemaru)
      Note that future version of this would change its default as Atom 1.0.
      http://teahut.sakura.ne.jp/b/2007-06-24-1.html

2007/07/27 (0.22)
    * bugfix: Daylight saving time accepted.
      http://cpantesters.perl.org/show/XML-FeedPP.html#XML-FeedPP-0.21

2007/01/21 (0.21)
    * update new() method to allow key/value pairs to set elements.
    * update add_item() method to allow key/value pairs to set elements.
    * add elements() undocumented method which sets elements by key/value pairs.
    * add match_item() method which finds items by regular expressions.
    * update sort_item() method to recognizes time zone of items.
    * add get_pubDate_epoch() undocumented method which returns time as second.

2006/12/29 (0.20) beta
    * allow a date time format which comes without second.

2006/12/16 (0.19)
    * negative index supported: get_item() remove_item() limit_item()
    * POD updated (thanks to sierra and silver)

2006/12/15 (0.17)
    * $item->get('@attr') supported (thanks to javiermm)

2006/09/05 (0.16)
    * some of valid/invalid W3CDTF formats supported (thanks to Yamamoto)

2006/08/27 (0.15)
    * Atom 1.0 support got forward (thanks to Ole Kasper Olsen)

2006/05/07 (0.13)
    * buf fix: get_pubDate_rfc1123() for RDF/Atom
    * buf fix: image() for RDF, rdf:about attribute
    * image() for Atom supports additional content types: image/x-icon, etc.

2006/05/05 (0.12)
    * new method: clear_item()
    * image() method now supports XML::FeedPP::Atom as well.

2006/05/03 (0.11)
    * new method: remove_item() (thanks to JUNDU)
    * add_item() method now allows clone another item/entry instance.

2006/04/30 (0.10)
    * category() method fixed for more then one category. (thanks to vlajbert)
    * normalize() method normalizes pubDate element as well. (thanks to junichi)