@@ -1,13 +1,14 @@
 --- #YAML:1.0
 name:                XML-FeedPP
-version:             0.30
+version:             0.32
 abstract:            ~
 license:             perl
-generated_by:        ExtUtils::MakeMaker version 6.36
+author:              ~
+generated_by:        ExtUtils::MakeMaker version 6.42
 distribution_type:   module
 requires:     
     Test::More:                    0
     XML::TreePP:                   0.21
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.2.html
-    version: 1.2
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
